Migrate to Gradle convention plugins